solver weird padding issue with scrollbars and gnome-terminal

--- a/MosCloud/gtk-3.0/apps/gnome-applications.css
+++ b/MosCloud/gtk-3.0/apps/gnome-applications.css
@@ -144,6 +144,12 @@ TerminalWindow .frame.scrollbar.trough {
     border-color: @borders;
     background-color: @theme_bg_color;  }
 
+TerminalWindow .scrollbar.vertical .slider {
+  margin-left: 3px; }
+
+TerminalWindow .scrollbar.trough {
+  border-width: 0; }
+
 /*********
  * gedit *
  *********/
